fix: keep hanging-punctuation visible for input and textarea

--- a/src/preset.scss
+++ b/src/preset.scss
@@ -1,4 +1,4 @@
-/*! Preset v4.0.0 | MIT License | https://github.com/Microflash/preset */
+/*! Preset v4.0.1 | MIT License | https://github.com/Microflash/preset */
 
 // sets the default value of `box-sizing` from `content-box` to `border-box`
 // so that `inline-size` is not affected by `padding` or `border`
@@ -25,8 +25,6 @@
 	block-size: 100%;
 	// prevents adjustments of `font-size` after orientation changes
 	text-size-adjust: 100%;
-	// keeps hanging punctuations outside the line box (supported in Safari for now)
-	hanging-punctuation: first last;
 
 	// enables smooth scrolling when reduced-motion is unspecified
 	// opt-out the e-readers which may have low refresh rates using `update: fast`
@@ -44,6 +42,12 @@
 		// puts some breathing room between a targeted element and the edges of the scrollport
 		scroll-padding-block-start: var(--preset-scroll-padding, 3rem);
 	}
+}
+
+// keeps hanging punctuation outside the line box (supported in Safari for now)
+// except for `input` and `textarea` where they should be visible and inside the line box
+:where(:not(input, textarea)) {
+	hanging-punctuation: first last;
 }
 
 :where(body) {
